correcting alignment in style sheet for inventory elements

--- a/public/style.css
+++ b/public/style.css
@@ -78,8 +78,13 @@ ul, li{
     justify-content: space-evenly;
     font-size: var(--fs-h3);
 }
-.jewelryItems span{
-     font-size: var(--fs-body);
+
+.jewelryItems{
+     font-size: 20px;
+     color: var(--clr-accent5);
+     display: flex;
+     flex-direction: row;
+     padding: .5em;
 
 }
 i{
